--- a/pfe-frontend/src/app/core/sidebar/sidebar.component.html
+++ b/pfe-frontend/src/app/core/sidebar/sidebar.component.html
@@ -35,8 +35,9 @@
       <ul>
         <li><a pRipple routerLink="roles" routerLinkActive="active"
             class="block p-2 rounded hover:bg-blue-100">Manage Roles</a></li>
-        <li><a pRipple routerLink="permissions" routerLinkActive="active"
-            class="block p-2 rounded hover:bg-blue-100">Manage Permissions</a></li>
+             <li><a pRipple routerLink="departments" routerLinkActive="active"
+            class="block p-2 rounded hover:bg-blue-100">Departments</a></li>
+       
       </ul>
     </div>
 
@@ -65,8 +66,7 @@
       <ul>
         <li><a pRipple routerLink="discipline" routerLinkActive="active"
             class="block p-2 rounded hover:bg-blue-100">Disciplinary Actions</a></li>
-            <li><a pRipple routerLink="departments" routerLinkActive="active"
-            class="block p-2 rounded hover:bg-blue-100">departments</a></li>
+           
       </ul>
     </div>
 
