--- a/pfe-frontend/src/app/core/features/components/training/training-edit/training-edit.component.html
+++ b/pfe-frontend/src/app/core/features/components/training/training-edit/training-edit.component.html
@@ -113,15 +113,18 @@
           Location is required
         </div>
       </div>
+
+      <!-- Status -->
       <div class="form-group">
         <label for="status">Status*</label>
-        <select 
-          id="status" 
-          formControlName="status" 
-          class="form-control"
-          [class.is-invalid]="trainingForm.get('status')?.invalid && trainingForm.get('status')?.touched">
-          <option *ngFor="let status of statusOptions" [value]="status">{{status}}</option>
-        </select>
+        <p-dropdown
+          id="status"
+          [options]="statusOptions"
+          formControlName="status"
+          placeholder="Select Status"
+          [showClear]="false"
+          class="w-full"
+        ></p-dropdown>
         <div class="invalid-feedback" *ngIf="trainingForm.get('status')?.invalid && trainingForm.get('status')?.touched">
           Status is required
         </div>
@@ -145,31 +148,4 @@
         </button>
       </div>
     </form>
-
-
-    <div class="participants-section">
-      <h3>Assigned Employees</h3>
-      
-      <div class="add-participant">
-        <select [(ngModel)]="newEmployeeId" class="form-control">
-          <option [value]="null">Select Employee to Add</option>
-          <option *ngFor="let emp of availableEmployees" [value]="emp.id">
-            {{ emp.first_name }} {{ emp.last_name }}
-          </option>
-        </select>
-        <button type="button" class="btn btn-secondary" (click)="addParticipant()">Add Employee</button>
-      </div>
-    
-      <table class="participants-table text-black">
-        <tr *ngFor="let participant of participants">
-          <td>{{ participant.employee.first_name }} {{ participant.employee.last_name }}</td>
-          <td>{{ participant.status }}</td>
-          <td>
-            <button class="btn btn-sm btn-danger" (click)="removeParticipant(participant.id)">
-              Remove
-            </button>
-          </td>
-        </tr>
-      </table>
-    </div>
   </div>
