--- a/pfe-frontend/src/app/core/features/components/department/department-list/department-list.component.html
+++ b/pfe-frontend/src/app/core/features/components/department/department-list/department-list.component.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto px-4 py-8">
   <div class="flex justify-between items-center mb-6">
-    <h2 class="text-2xl font-bold text-gray-800">Liste des départements</h2>
+    <h2 class="text-2xl font-bold text-gray-800">Departments List</h2>
     <p-button 
       icon="pi pi-plus" 
       label="Create Department" 
